[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loaderx"
dynamic = ["version"]
description = "A record-based data runtime, focused on delivering extreme throughput and low latency"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Ben0i0d", email = "ben0i0d@foxmail.com"},
]
license = {file = "LICENSE"}
keywords = ["flax", "python", "dataloader"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["numpy", "array-record", "tqdm"]

[tool.setuptools]
packages = ["loaderx"]

[tool.setuptools.package-data]
"loaderx" = ["lib/*.so"]

[tool.setuptools.dynamic]
version = {attr = "loaderx.__version__"}

[project.urls]
"Homepage" = "https://codeberg.org/eoelab/loaderx"
"Documentation" = "https://codeberg.org/eoelab/loaderx"
"Source" = "https://codeberg.org/eoelab/loaderx"
"Bug Tracker" = "https://codeberg.org/eoelab/loaderx"